<resources>
    <string name="app_name">Monstriki</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_reg">Registration</string>
    <string name="loading">Подождите</string>
    <string name="authorisation_login">Логин</string>
    <string name="main_font">fonts/GOTHIC.TTF</string>

    <!-- activity_registration.xml -->
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="ns">NS</string>
    <string name="triki">TRIKI</string>
    <string name="striki">STRIKI</string>
    <string name="nstriki">NSTRIKI</string>
    <string name="registration">Регистрация</string>

    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="form">Класс</string>
    <string name="letter">Буква</string>
    <string name="register">Зарегистрироваться</string>

    <!--acitivty_authorisation-->
    <string name="required">Обязательное поле.</string>

    <!-- activity_parameters.xml -->
    <string name="question_body">Какое тело\n у твоего монстрика?</string>
    <string name="question_eyes">Какие глаза\n у твоего монстрика?</string>
    <string name="question_mouth">Какой рот\n у твоего монстрика?</string>
    <string name="next">Дальше</string>
    <string name="back">Назад</string>
    <string name="need_your_name">Твоему монстру нужно имя</string>
    <string name="write_name">А теперь напиши сюда имя монстра</string>
    <string name="empty_name">Имя не должно быть пустым</string>

    <!-- fragment_monster.xml -->
    <string name="i_want_to_eat">Я кушать \nхочу!</string>

    <!-- fragment_settings.xml -->
    <string name="settings">Настройки</string>
    <string name="currentEyes">Глаза</string>
    <string name="currentMouth">Рот</string>
    <string name="hands">Руки</string>
    <string name="logout">Выйти из пользователя</string>
    <string name="save">Сохранить</string>

    <!-- fragment_prizes.xml -->
    <string name="prize">Призы</string>
    <string name="no_prize">У тебя нет наград</string>

    <!-- fragment_sweets.xml -->
    <string name="sweets">Сладости</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>

    <string-array name="days_of_week">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>

    <string name="title_activity_main_teacher">MainTeacherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- fragment_journal.xml -->
    <string name="fill_today">Заполнить на сегодня</string>
    <string name="look_form">Посмотреть класс</string>
    <string name="exit">Выход</string>
    <string name="journal">Журнал</string>
    <string name="data">Дата</string>
    <string name="pupil">Ученик</string>
    <string name="points">Баллы</string>
    <string name="tags">Тэги</string>
    <string name="comment">Тэг</string>
    <string name="choose_tag">Выберите тэг</string>
    <string name="choose">Выбрать</string>
    <string name="cancel">Выйти</string>
    <string-array name="tags_array">
        <item>уборка</item>
        <item>учеба</item>
        <item>спорт</item>
        <item>помощь</item>
        <item>активность</item>
        <item>исполнительность</item>
        <item>подготовленность</item>
        <item>дисциплина</item>
        <item>дежурство</item>
        <item>пунктуальность</item>
    </string-array>

    <string-array name="achievements_array">
        <item>Чистюля</item>
        <item>Самый увлеченный\nучебой</item>
        <item>Самый спортивный</item>
        <item>Самый лучший помощник</item>
        <item>Самый активный</item>
        <item>Самый исполнительный</item>
        <item>Самый подготовленный</item>
        <item>Самый дисциплинированный</item>
        <item>Самый лучший дежурный</item>
        <item>Самый пунктуальный</item>
    </string-array>

    <!-- fragment_form_parameters.xml -->
    <string name="litera">Литера</string>
    <string name="ready">Готово</string>

    <string-array name="literas">
        <item>А</item>
        <item>Б</item>
        <item>В</item>
        <item>Г</item>
        <item>Д</item>
    </string-array>

    <string-array name="forms_num">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- fragment_star -->
    <string name="star">Доска почета</string>
    <string name="rate">Рейтинг</string>
    <string name="hall_of_fame">Холл славы</string>
    <string name="body">Тело</string>

    <!-- fragment_settings -->
    <string name="settings_name">Имя: %d</string>
    <string name="settings_class">Класс: %d</string>
    <string name="settings_teacher">Учитель: %d</string>
    <string name="tv_monster_name">Имя монстрика</string>
    <string name="create_done">Готово</string>
    <string name="create_save">Сохранить</string>
    <string name="create_monster_name">Введите имя монстра</string>

    <string name="not_your_class_error">У вас нет такого класса</string>

    <string-array name="wish_card1">
        <item>Покорми меня</item>
        <item>Я кушать хочу</item>
        <item>А пончик вкусный? Дай попробовать</item>
    </string-array>

    <string-array name="wish_card2">
        <item>Я добавки хочу</item>
        <item>Вчера пончик клубничный был. А сегодня какой?</item>
    </string-array>

    <string-array name="wish_card3">
        <item>Это было вкусно</item>
        <item>Спасибо, что приносишь мне вкусняшки</item>
    </string-array>

    <string-array name="happy_card">
        <item>Я счастлив</item>
        <item>Я сыт</item>
    </string-array>

    <string name="goal_saved">Изменения сохранены</string>


</resources>
