<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    android:background="@drawable/background_main_teacher">

    <TextView
        android:id="@+id/tv_teacher_name"
        fontPath="fonts/acquestscript.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/margin_normal"
        android:textColor="@color/color_white"
        android:textSize="@dimen/textsize_xxlarge"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_fill_today"
        android:text="@string/fill_today"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:textSize="@dimen/textsize_large"
        fontPath="fonts/chalk_3892.ttf"
        android:textColor="@color/color_white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_look_form"
        android:text="@string/look_form"
        android:layout_margin="@dimen/margin_small"
        android:textSize="@dimen/textsize_large"
        fontPath="fonts/chalk_3892.ttf"
        android:textColor="@color/color_white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_exit"
        android:text="@string/exit"
        android:layout_margin="@dimen/margin_small"
        android:textSize="@dimen/textsize_large"
        fontPath="fonts/chalk_3892.ttf"
        android:textColor="@color/color_white"/>

</LinearLayout>
