<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_m"
        android:text="@string/m"
        android:textSize="@dimen/textsize_logo"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_toLeftOf="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start|center_horizontal"
        android:layout_below="@+id/btn_registration" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:elevation="@dimen/elevation_logo"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/tv_n"
        android:layout_below="@+id/btn_registration"
        android:background="@drawable/monster" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_n"
        android:text="@string/n"
        android:textSize="@dimen/textsize_logo"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_registration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_stiki"
        android:text="@string/striki"
        android:textSize="@dimen/textsize_logo"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@+id/tv_n"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start|center_horizontal"
        android:layout_below="@+id/btn_registration" />

</merge>