<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.android.monstrici.monstrici.ui.view.main_teacher.MainTeacherActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_form"
        android:text="@string/form"
        android:textSize="@dimen/textsize_large"
        android:textColor="@color/color_purple"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view1"
        android:layout_below="@+id/tv_form"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_forms"
        android:layout_below="@+id/view1"
        android:layout_margin="@dimen/margin_small"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view2"
        android:layout_below="@+id/rv_forms"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_letter"
        android:text="@string/litera"
        android:textSize="@dimen/textsize_large"
        android:textColor="@color/color_purple"
        android:layout_below="@+id/view2"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view3"
        android:layout_below="@+id/tv_letter"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_letters"
        android:layout_below="@+id/view3"
        android:layout_margin="@dimen/margin_small"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view4"
        android:layout_below="@+id/rv_letters"
        android:background="@android:color/darker_gray" />

    <Button
        android:layout_width="@dimen/width_btn_save"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ready"
        android:text="@string/ready"
        android:layout_below="@+id/view4"
        android:background="@drawable/btn_corner_purple"
        android:textColor="@color/color_purple"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>

</RelativeLayout>