<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    android:padding="@dimen/margin_small">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
       />

    <ImageView
        android:id="@+id/iv_monstriki"
        android:layout_width="@dimen/width_login_monstriki_logo"
        android:layout_height="@dimen/height_login_monstriki_logo"
        android:layout_above="@+id/tv_name_title"
        android:src="@drawable/logo_purple"/>

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_login"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/name"
        android:textColor="@color/color_purple"
        android:textSize="@dimen/textsize_small"/>

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_above="@+id/tv_password_title"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:inputType="text"
        android:maxLines="@integer/max_lines_edit_text"
        android:nextFocusForward="@+id/et_password"
        android:paddingLeft="@dimen/margin_left_large"/>

    <TextView
        android:id="@+id/tv_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/password"
        android:textColor="@color/color_purple"
        android:textSize="@dimen/textsize_small"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_below="@+id/tv_password_title"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:inputType="textPassword"
        android:maxLines="@integer/max_lines_edit_text"
        android:paddingLeft="@dimen/margin_left_large"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="@dimen/width_btn_save"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/color_purple"/>

</RelativeLayout>