<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/iv_monster"
        layout="@layout/view_toolbar_monstriki"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_monster_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/question_body"
            android:textAlignment="center"
            android:textColor="@color/color_purple"
            android:textSize="@dimen/textsize_question"
            cardview:layout_constraintBottom_toTopOf="@+id/rv_monster_items"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.0"
            cardview:layout_constraintStart_toStartOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_monster_items"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="28dp"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            cardview:layout_constraintBottom_toTopOf="@+id/la_monster"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.0"
            cardview:layout_constraintStart_toStartOf="parent"/>

        <include
            android:id="@+id/la_monster"
            layout="@layout/fragment_item_monster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:layout_constraintVertical_bias="0.709"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="92dp"
            android:layout_marginRight="92dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_corner"
            android:text="@string/next"
            android:textColor="@color/color_register"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintTop_toBottomOf="@+id/la_monster"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="92dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_corner"
            android:text="@string/back"
            android:textColor="@color/color_register"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toBottomOf="@+id/la_monster"/>
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>